--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -2984,7 +2984,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -2995,7 +2995,7 @@
     *: none
     rtc: "OFF = Cancelar"
     h100,h120,h300: "STOP = Cancelar"
-    ipod*,c200,sa9200: "MENU = Cancelar"
+    ipod*,c200*,sa9200: "MENU = Cancelar"
     x5,m5: "RECORD = Cancelar"
     h10,h10_5gb,e200*: "PREV = Cancelar"
     gigabeatf: "POWER = Cancelar"
@@ -3004,7 +3004,7 @@
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,ipod*,e200*,c200,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,ipod*,e200*,c200*,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -3067,18 +3067,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Disco duro lleno. Pulse OFF para continuar"
     h100,h120,h300: "Disco duro lleno. Pulse STOP para continuar"
     m5,x5: "Disco duro lleno. Pulse POWER para continuar"
-    e200*,c200: "Disco duro lleno. Pulse PREV para continuar"
+    e200*,c200*: "Disco duro lleno. Pulse PREV para continuar"
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -5405,7 +5405,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -5414,7 +5414,7 @@
     player,h100,h120,h300: "STOP para cancelar"
     ipod*: "PLAY/PAUSE para cancelar"
     x5,m5: "Pulsación larga de PLAY para cancelar"
-    h10,h10_5gb,e200*,c200: "PREV para cancelar"
+    h10,h10_5gb,e200*,c200*: "PREV para cancelar"
     gigabeats: "BACK para cancelar"
     gigabeatf: "POWER para cancelar"
   </dest>
@@ -6122,7 +6122,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8002,19 +8002,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200: "m S D"
+    e200*,c200*: "m S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -9206,14 +9206,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Construyendo base de datos... %d encontrados (OFF para volver)"
     h100,h120,h300: "Construyendo base de datos... %d encontrados (STOP para volver)"
     ipod*: "Construyendo base de datos... %d encontrados (PREV para volver)"
     x5,m5,gigabeat*,mrobe100: "Construyendo base de datos... %d encontrados (LEFT para volver)"
-    h10,h10_5gb,e200*,c200,sa9200: "Construyendo base de datos... %d encontrados (PREV para volver)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Construyendo base de datos... %d encontrados (PREV para volver)"
   </dest>
   <voice>
     *: "elementos encontrados para la base de datos"
@@ -9933,13 +9933,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Sí"
     h100,h120,h300: "NAVI = Sí"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Sí"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Sí"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -9954,17 +9954,17 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Fijar"
     h100,h120,h300: "NAVI = Fijar"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Fijar"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Fijar"
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
