--- a/apps/lang/magyar.lang
+++ b/apps/lang/magyar.lang
@@ -261,13 +261,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Igen"
     h100,h120,h300: "NAVI = Igen"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Igen"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Igen"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2366,14 +2366,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Készítem az adatbázist... %d-t találtam (OFF - vissza)"
     h100,h120,h300: "Készítem az adatbázist... %d-t találtam (STOP - vissza)"
     ipod*: "Készítem az adatbázist... %d-t találtam (PREV - vissza)"
     x5,m5,gigabeat*,mrobe100: "Készítem az adatbázist... %d-t találtam (BAL - vissza)"
-    h10,h10_5gb,e200*,c200,sa9200: "Készítem az adatbázist... %d-t találtam (PREV - vissza)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Készítem az adatbázist... %d-t találtam (PREV - vissza)"
   </dest>
   <voice>
     *: "entries found for database"
@@ -4124,17 +4124,17 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Beállít"
     h100,h120,h300: "NAVI = Beállít"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Beállít"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Beállít"
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200,gigabeatf: ""
+    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200*,gigabeatf: ""
   </voice>
 </phrase>
 <phrase>
@@ -4145,7 +4145,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4156,7 +4156,7 @@
     *: none
     rtc: "KI = mégsem"
     h100,h120,h300: "STOP = mégsem"
-    ipod*,c200,sa9200: "MENU = mégsem"
+    ipod*,c200*,sa9200: "MENU = mégsem"
     x5,m5: "RECORD = mégsem"
     h10,h10_5gb,e200*: "PREV = mégsem"
     gigabeatf: "POWER = mégsem"
@@ -4165,7 +4165,7 @@
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,ipod*,e200*,c200,x5,m5,h10,h10_gb,gigabeatf: ""
+    rtc,h100,h120,h300,ipod*,e200*,c200*,x5,m5,h10,h10_gb,gigabeatf: ""
   </voice>
 </phrase>
 <phrase>
@@ -6923,18 +6923,18 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD"
+    e200*,c200*: "mSD"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
-    e200*,c200: "micro Secure Digital card:"
+    e200*,c200*: "micro Secure Digital card:"
     ondio*: "Multimedia card"
   </voice>
 </phrase>
@@ -8296,18 +8296,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "A merevlemez tele van. Folytatáshoz nyomj OFF-ot."
     h100,h120,h300: "A merevlemez tele van. Folytatáshoz nyomj STOP-ot."
     m5,x5: "A merevlemez tele van. Folytatáshoz nyomd meg a POWER gombot."
-    e200*,c200: "A merevlemez tele van. Folytatáshoz nyomd meg a PREV gombot."
+    e200*,c200*: "A merevlemez tele van. Folytatáshoz nyomd meg a PREV gombot."
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8398,7 +8398,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8407,7 +8407,7 @@
     player,h100,h120,h300: "STOP - megszakít"
     ipod*: "PLAY/PAUSE - megszakít"
     x5,m5: "PLAY hosszan - megszakít"
-    h10,h10_5gb,e200*,c200: "PREV - megszakít"
+    h10,h10_5gb,e200*,c200*: "PREV - megszakít"
     gigabeats: "VISSZA - megszakít"
     gigabeatf: "POWER - megszakít"
   </dest>
@@ -10461,7 +10461,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
