--- a/apps/lang/polski.lang
+++ b/apps/lang/polski.lang
@@ -268,13 +268,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Tak"
     h100,h120,h300: "NAVI = Tak"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Tak"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Tak"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2391,14 +2391,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Budowanie biblioteki... %d znalezionych (OFF żeby wrócić)"
     h100,h120,h300: "Budowanie biblioteki... %d znalezionych (STOP żeby wrócić)"
     ipod*: "Budowanie biblioteki... %d znalezionych (PREV żeby wrócić)"
     x5,m5,gigabeat*,mrobe100: "Budowanie biblioteki... %d znalezionych (LEFT żeby wrócić)"
-    h10,h10_5gb,e200*,c200,sa9200: "Budowanie biblioteki... %d znalezionych (PREV żeby wrócić)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Budowanie biblioteki... %d znalezionych (PREV żeby wrócić)"
   </dest>
   <voice>
     *: "Znaleziono wpisy do biblioteki"
@@ -4150,17 +4150,17 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Ustaw"
     h100,h120,h300: "NAVI = Ustaw"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Ustaw"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Ustaw"
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -4171,7 +4171,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4182,7 +4182,7 @@
     *: none
     rtc: "OFF = Przywróć"
     h100,h120,h300: "STOP = Przywróć"
-    ipod*,c200,sa9200: "MENU = Przywróć"
+    ipod*,c200*,sa9200: "MENU = Przywróć"
     x5,m5: "RECORD = Przywróć"
     h10,h10_5gb,e200*: "PREV = Przywróć"
     gigabeatf: "POWER = Przywróć"
@@ -4191,7 +4191,7 @@
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,ipod*,e200*,c200,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,ipod*,e200*,c200*,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -6953,19 +6953,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "microSD:"
+    e200*,c200*: "microSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "ha de 1"
-    e200*,c200: "mikro es di"
+    e200*,c200*: "mikro es di"
     ondio*: "em em ce"
   </voice>
 </phrase>
@@ -8327,14 +8327,14 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Pamięć jest pełna. Wciśnij OFF żeby kontynuować."
     h100,h120,h300: "Pamięć jest pełna. Wciśnij STOP żeby kontynuować."
     m5,x5: "Pamięć jest pełna. Wciśnij POWER żeby kontynuować."
-    e200*,c200: "Pamięć jest pełna. Wciśnij PREV żeby kontynuować."
+    e200*,c200*: "Pamięć jest pełna. Wciśnij PREV żeby kontynuować."
   </dest>
   <voice>
     *: none
@@ -8428,7 +8428,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8437,7 +8437,7 @@
     player,h100,h120,h300: "STOP = Anuluj"
     ipod*: "PLAY/PAUSE = Anuluj"
     x5,m5: "Przytrzymaj PLAY = Anuluj"
-    h10,h10_5gb,e200*,c200: "PREV = Anuluj"
+    h10,h10_5gb,e200*,c200*: "PREV = Anuluj"
     gigabeats: "BACK = Anuluj"
     gigabeatf: "POWER = Anuluj"
   </dest>
@@ -10492,7 +10492,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
