--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -4088,19 +4088,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Эйч Ди 1"
-    e200*,c200: "микро Эс Ди"
+    e200*,c200*: "микро Эс Ди"
     ondio*: "Эм Эм Си"
   </voice>
 </phrase>
@@ -4233,7 +4233,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4244,7 +4244,7 @@
     *: none
     rtc: "ВЫКЛ. = Отмена"
     h100,h120,h300: "СТОП = Отмена"
-    ipod*,c200,sa9200: "МЕНЮ = Отмена"
+    ipod*,c200*,sa9200: "МЕНЮ = Отмена"
     x5,m5: "ЗАПИСЬ = Отмена"
     h10,h10_5gb,e200*: "ПРЕД. = Отмена"
     gigabeatf: "ВЫКЛ. = Отмена"
@@ -4332,14 +4332,14 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Диск заполнен. Нажмите ВЫКЛ. для продолжения."
     h100,h120,h300: "Диск заполнен. Нажмите СТОП для продолжения."
     m5,x5: "Диск заполнен. Нажмите ВЫКЛ. для продолжения."
-    e200*,c200: "Диск заполнен. Нажмите ПРЕД. для продолжения."
+    e200*,c200*: "Диск заполнен. Нажмите ПРЕД. для продолжения."
   </dest>
   <voice>
     *: none
@@ -6949,7 +6949,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -6958,7 +6958,7 @@
     player,h100,h120,h300: "СТОП для отмены"
     ipod*: "ПАУЗА для отмены"
     x5,m5: "ВОСПР. для отмены"
-    h10,h10_5gb,e200*,c200: "ПРЕД. для отмены"
+    h10,h10_5gb,e200*,c200*: "ПРЕД. для отмены"
     gigabeats: "НАЗАД для отмены"
     gigabeatf: "ВЫКЛ. для отмены"
   </dest>
@@ -7768,7 +7768,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8139,14 +8139,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Построение базы... %d найдено (ВЫКЛ. для отмены)"
     h100,h120,h300: "Построение базы... %d найдено (СТОП для отмены)"
     ipod*: "Построение базы... %d найдено (ПРЕД. для отмены)"
     x5,m5,gigabeat*,mrobe100: "Построение базы... %d найдено (ВЛЕВО для отмены)"
-    h10,h10_5gb,e200*,c200,sa9200: "Построение базы... %d найдено (ПРЕД. для отмены)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Построение базы... %d найдено (ПРЕД. для отмены)"
   </dest>
   <voice>
     *: "найдено записей в базе"
@@ -8919,19 +8919,19 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "ВОСПР. = Да"
     h100,h120,h300: "НАВИГ. = Да"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "ВЫБОР = Да"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "ВЫБОР = Да"
     player: "(ВОСПР./СТОП)"
   </dest>
   <voice>
     *: ""
     h100,h120,h300: ""
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: ""
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: ""
     player: ""
   </voice>
 </phrase>
@@ -8943,19 +8943,19 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ВКЛ. = Установить"
     h100,h120,h300: "НАВИГ. = Установить"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "ВЫБОР = Установить"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "ВЫБОР = Установить"
   </dest>
   <voice>
     *: none
     rtc: ""
     h100,h120,h300: ""
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
