--- a/apps/lang/dansk.lang
+++ b/apps/lang/dansk.lang
@@ -3744,19 +3744,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Hard disk 1"
-    e200*,c200: "Mikro SD kort"
+    e200*,c200*: "Mikro SD kort"
     ondio*: "Multimedie kort"
   </voice>
 </phrase>
@@ -3889,7 +3889,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200: "MENU = Revert"
+    ipod*,c200*: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -3901,7 +3901,7 @@
     *: none
     rtc: "SLUK = Fortryd"
     h100,h120,h300: "STOP = Fortryd"
-    ipod*,c200: "MENU = Fortryd"
+    ipod*,c200*: "MENU = Fortryd"
     x5,m5: "OPTAG = Fortryd"
     h10,h10_5gb,e200*: "FORRIGE = Fortryd"
     gigabeatf: "TÆND/SLUK = Fortryd"
@@ -3913,7 +3913,7 @@
     *: none
     rtc: ""
     h100,h120,h300: ""
-    ipod*,e200*,c200,sa9200: ""
+    ipod*,e200*,c200*,sa9200: ""
     x5,m5: ""
     h10,h10_5gb: ""
     gigabeatf: ""
@@ -3998,21 +3998,21 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Disken er fuld. Tryk SLUK for at fortsætte."
     h100,h120,h300: "Disken er fuld. Tryk STOP for at fortsætte."
     m5,x5: "Disken er fuld. Tryk TÆND/SLUK for at fortsætte."
-    e200*,c200: "Disken er fuld. Tryk FORRIGE for at fortsætte."
+    e200*,c200*: "Disken er fuld. Tryk FORRIGE for at fortsætte."
   </dest>
   <voice>
     *: none
     recording: ""
     h100,h120,h300: ""
     m5,x5: ""
-    e200*,c200: ""
+    e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -6619,7 +6619,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -6628,7 +6628,7 @@
     player,h100,h120,h300: "STOP for at afbryde"
     ipod*: "SPIL/PAUSE for at afbryde"
     x5,m5: "Lang SPIL for at afbryde"
-    h10,h10_5gb,e200*,c200: "FORRIGE for at afbryde"
+    h10,h10_5gb,e200*,c200*: "FORRIGE for at afbryde"
     gigabeats: "TILBAGE for at afbryde"
     gigabeatf: "TÆND/SLUK for at afbryde"
   </dest>
@@ -8747,7 +8747,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -9325,7 +9325,7 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*: "Building database... %d found (PREV to return)"
     sa9200: "Building database... %d found (REW to return)"
   </source>
   <dest>
@@ -9333,7 +9333,7 @@
     h100,h120,h300: "Bygger database... %d fundet (STOP for at stoppe)"
     ipod*: "Bygger database... %d fundet (FORRIGE for at stoppe)"
     x5,m5,gigabeat*,mrobe100: "Bygger database... %d fundet (VENSTRE for at stoppe)"
-    h10,h10_5gb,e200*,c200: "Bygger database... %d fundet (FORRIGE for at stoppe)"
+    h10,h10_5gb,e200*,c200*: "Bygger database... %d fundet (FORRIGE for at stoppe)"
     sa9200: "Bygger database... %d fundet (SPOL TILBAGE for at stoppe)"
   </dest>
   <voice>
@@ -9341,7 +9341,7 @@
     h100,h120,h300: ""
     ipod*: ""
     x5,m5,gigabeat*,mrobe100: ""
-    h10,h10_5gb,e200*,c200,sa9200: ""
+    h10,h10_5gb,e200*,c200*,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -10561,13 +10561,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "SPIL = Ja"
     h100,h120,h300: "NAVI = Ja"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100: "VÆLG = Ja"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100: "VÆLG = Ja"
     player: "(SPIL/STOP)"
   </dest>
   <voice>
@@ -10582,21 +10582,21 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100: "SELECT = Set"
     sa9200: "PLAY = Set"
   </source>
   <dest>
     *: none
     rtc: "Tænd = Indstil"
     h100,h120,h300: "NAVI = Indstil"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100: "VÆLG = Indstil"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100: "VÆLG = Indstil"
     sa9200: "SPIL = Indstil"
   </dest>
   <voice>
     *: none
     rtc: ""
     h100,h120,h300: ""
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
