--- a/apps/lang/greek.lang
+++ b/apps/lang/greek.lang
@@ -265,13 +265,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Επικύρωση"
     h100,h120,h300: "NAVI = Επικύρωση"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Επικύρωση"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Επικύρωση"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2371,14 +2371,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Δημιουργία βάσεως δεδομένων... βρέθηκαν %d (OFF για επιστροφή)"
     h100,h120,h300: "Δημιουργία βάσεως δεδομένων... βρέθηκαν %d (STOP για επιστροφή)"
     ipod*: "Δημιουργία βάσεως δεδομένων... βρέθηκαν %d (PREV για επιστροφή)"
     x5,m5,gigabeat*,mrobe100: "Δημιουργία βάσεως δεδομένων... βρέθηκαν %d (LEFT για επιστροφή)"
-    h10,h10_5gb,e200*,c200,sa9200: "Δημιουργία βάσεως δεδομένων... βρέθηκαν %d (PREV για επιστροφή)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Δημιουργία βάσεως δεδομένων... βρέθηκαν %d (PREV για επιστροφή)"
   </dest>
   <voice>
     *: "Kαταχωρήσεις βρέθηκαν για τη βάση δεδομένων"
@@ -4130,13 +4130,13 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Ρύθμιση"
     h100,h120,h300: "NAVI = Ρύθμιση"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Ρύθμιση"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Ρύθμιση"
   </dest>
   <voice>
     *: none
@@ -4150,7 +4150,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4161,7 +4161,7 @@
     *: none
     rtc: "OFF = Ακύρωση"
     h100,h120,h300: "STOP = Ακύρωση"
-    ipod*,c200,sa9200: "MENU = Ακύρωση"
+    ipod*,c200*,sa9200: "MENU = Ακύρωση"
     x5,m5: "RECORD = Ακύρωση"
     h10,h10_5gb,e200*: "PREV = Ακύρωση"
     gigabeatf: "POWER = Ακύρωση"
@@ -6927,19 +6927,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "Έιτς Ντι 1"
-    e200*,c200: "μάικρο Ες Ντι"
+    e200*,c200*: "μάικρο Ες Ντι"
     ondio*: "Εμ Εμ Σι"
   </voice>
 </phrase>
@@ -8300,18 +8300,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Ο δίσκος είναι γεμάτος. Πατήστε OFF για συνέχεια."
     h100,h120,h300: "Ο δίσκος είναι γεμάτος. Πατήστε STOP για συνέχεια."
     m5,x5: "Ο δίσκος είναι γεμάτος. Πατήστε POWER για συνέχεια.."
-    e200*,c200: "Ο δίσκος είναι γεμάτος. Πατήστε PREV για συνέχεια."
+    e200*,c200*: "Ο δίσκος είναι γεμάτος. Πατήστε PREV για συνέχεια."
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8402,7 +8402,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8411,7 +8411,7 @@
     player,h100,h120,h300: "STOP για ακύρωση"
     ipod*: "PLAY/PAUSE για ακύρωση"
     x5,m5: "Long PLAY για ακύρωση"
-    h10,h10_5gb,e200*,c200: "PREV για ακύρωση"
+    h10,h10_5gb,e200*,c200*: "PREV για ακύρωση"
     gigabeats: "BACK για ακύρωση"
     gigabeatf: "POWER για ακύρωση"
   </dest>
@@ -10466,7 +10466,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
