--- a/apps/lang/lietuviu.lang
+++ b/apps/lang/lietuviu.lang
@@ -81,7 +81,7 @@
 #
 # Sandisk
 # Sansa E200        e200
-# Sansa C200        c200
+# Sansa C200        c200*
 #
 # Olympus
 # m:robe 100        mrobe100
@@ -334,13 +334,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Taip"
     h100,h120,h300: "NAVI = Taip"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Taip"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Taip"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2457,14 +2457,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Kuriama duomenų bazė... %d rasta (OFF grįžimui)"
     h100,h120,h300: "Kuriama duomenų bazė... %d rasta (STOP grįžimui)"
     ipod*: "Kuriama duomenų bazė... %d rasta (PREV grįžimui)"
     x5,m5,gigabeat*,mrobe100: "Kuriama duomenų bazė... %d rasta (LEFT grįžimui)"
-    h10,h10_5gb,e200*,c200,sa9200: "Kuriama duomenų bazė... %d rasta (PREV to grįžimui)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Kuriama duomenų bazė... %d rasta (PREV to grįžimui)"
   </dest>
   <voice>
     *: "entries found for database"
@@ -4216,17 +4216,17 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Nustatyti"
     h100,h120,h300: "NAVI = Nustatyti"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Nustatyti"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Nustatyti"
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -4237,7 +4237,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4248,7 +4248,7 @@
     *: none
     rtc: "OFF = Atstatyti"
     h100,h120,h300: "STOP = Atstatyti"
-    ipod*,c200,sa9200: "MENU = Atstatyti"
+    ipod*,c200*,sa9200: "MENU = Atstatyti"
     x5,m5: "RECORD = Atstatyti"
     h10,h10_5gb,e200*: "PREV = Atstatyti"
     gigabeatf: "POWER = Atstatyti"
@@ -7015,19 +7015,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "MSD:"
+    e200*,c200*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200: "micro S D"
+    e200*,c200*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -8388,18 +8388,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Diskas pilnas. Spauskite OFF."
     h100,h120,h300: "Diskas pilnas. Spauskite STOP."
     m5,x5: "Diskas pilnas. Spauskite POWER."
-    e200*,c200: "Diskas pilnas. Spauskite PREV."
+    e200*,c200*: "Diskas pilnas. Spauskite PREV."
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8490,7 +8490,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8499,7 +8499,7 @@
     player,h100,h120,h300: "STOP atšaukimui"
     ipod*: "PLAY/PAUSE atšaukimui"
     x5,m5: "Ilgas PLAY atšaukimui"
-    h10,h10_5gb,e200*,c200: "PREV atšaukimui"
+    h10,h10_5gb,e200*,c200*: "PREV atšaukimui"
     gigabeats: "BACK atšaukimui"
     gigabeatf: "POWER atšaukimui"
   </dest>
@@ -10554,7 +10554,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
