--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -4444,19 +4444,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "HD1"
-    e200*,c200: "micro S D"
+    e200*,c200*: "micro S D"
     ondio*: "Multimedia kaart"
   </voice>
 </phrase>
@@ -4589,7 +4589,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4600,7 +4600,7 @@
     *: none
     rtc: "OFF = terugzetten"
     h100,h120,h300: "STOP = terugzetten"
-    ipod*,c200,sa9200: "MENU = terugzetten"
+    ipod*,c200*,sa9200: "MENU = terugzetten"
     x5,m5: "RECORD = terugzetten"
     h10,h10_5gb,e200*: "PREV = terugzetten"
     gigabeatf: "POWER = terugzetten"
@@ -4688,14 +4688,14 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "De schijf is vol. Druk OFF om door te gaan."
     h100,h120,h300: "De schijf is vol. Druk STOP om door te gaan."
     m5,x5: "De schijf is vol. Druk POWER om door te gaan."
-    e200*,c200: "De schijf is vol. Druk PREV om door te gaan."
+    e200*,c200*: "De schijf is vol. Druk PREV om door te gaan."
   </dest>
   <voice>
     *: ""
@@ -7398,7 +7398,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -7407,7 +7407,7 @@
     player,h100,h120,h300: "STOP om af te breken"
     ipod*: "PLAY/PAUSE om af te breken"
     x5,m5: "Long PLAY om af te breken"
-    h10,h10_5gb,e200*,c200: "PREV om af te breken"
+    h10,h10_5gb,e200*,c200*: "PREV om af te breken"
     gigabeats: "BACK om af te breken"
     gigabeatf: "POWER om af te breken"
   </dest>
@@ -8804,7 +8804,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -9962,14 +9962,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Aanmaken van database... %d gevonden (OFF = terug)"
     h100,h120,h300: "Aanmaken van database... %d gevonden (STOP = terug)"
     ipod*: "Aanmaken van database... %d gevonden (PREV = terug)"
     x5,m5,gigabeat*,mrobe100: "Aanmaken van database... %d gevonden (LINKS = terug)"
-    h10,h10_5gb,e200*,c200,sa9200: "Aanmaken van database... %d gevonden (PREV = terug)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Aanmaken van database... %d gevonden (PREV = terug)"
   </dest>
   <voice>
     *: "Aanmaken van database"
@@ -10527,13 +10527,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Ja"
     h100,h120,h300: "NAVI = Ja"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Ja"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Ja"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -10548,13 +10548,13 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Instellen"
     h100,h120,h300: "NAVI = Instellen"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Instellen"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Instellen"
   </dest>
   <voice>
     *: none
