--- a/apps/lang/norsk-nynorsk.lang
+++ b/apps/lang/norsk-nynorsk.lang
@@ -4382,12 +4382,12 @@
   user: core
   <source>
     *: none
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
   </dest>
   <voice>
     *: none
@@ -4519,7 +4519,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "A = Revert"
@@ -4530,7 +4530,7 @@
     *: none
     rtc: "AV = tilbakestill"
     h100,h120,h300: "STOPP = tilbakestill"
-    ipod*,c200,sa9200: "MENY = tilbakestill"
+    ipod*,c200*,sa9200: "MENY = tilbakestill"
     x5,m5: "OPPTAK = tilbakestill"
     h10,h10_5gb,e200*: "TILBAKE = tilbakestill"
     gigabeatf: "A = tilbakestill"
@@ -4616,7 +4616,7 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press UP to continue."
+    e200*,c200*: "The disk is full. Press UP to continue."
   </source>
   <dest>
     *: none
@@ -7284,14 +7284,14 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
   </source>
   <dest>
     *: "AV for å avbryta"
     player,h100,h120,h300: "STOPP for å avbryta"
     ipod*: "SPEL/PAUSE for å avbryta"
     x5,m5: "SPEL (lenge) for å avbryta"
-    h10,h10_5gb,e200*,c200: "TILBAKE for å avbryta"
+    h10,h10_5gb,e200*,c200*: "TILBAKE for å avbryta"
   </dest>
   <voice>
     *: ""
@@ -8591,7 +8591,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -9691,14 +9691,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Byggjer database … Fann %d. (AV for å gå tilbake.)"
     h100,h120,h300: "Byggjer database … Fann %d. (STOPP for å gå tilbake.)"
     ipod*: "Byggjer database … Fann %d. (SPEL/PAUSE for å gå tilbake.)"
     x5,m5,gigabeat*,mrobe100: "Byggjer database … Fann %d. (VENSTRE for å gå tilbake.)"
-    h10,h10_5gb,e200*,c200,sa9200: "Byggjer database … Fann %d. (TILBAKE for å gå tilbake.)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Byggjer database … Fann %d. (TILBAKE for å gå tilbake.)"
   </dest>
   <voice>
     *: "oppføringar funne til databasen"
@@ -10228,13 +10228,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "SPEL = ja"
     h100,h120,h300: "NAVI = ja"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "VEL = ja"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "VEL = ja"
     player: "(SPEL/STOPP)"
   </dest>
   <voice>
@@ -10249,13 +10249,13 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "PÅ = vel"
     h100,h120,h300: "NAVI = vel"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "VEL = ja"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "VEL = ja"
   </dest>
   <voice>
     *: none
