--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -261,13 +261,13 @@
  <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
  </source>
  <dest>
     *: "PLAY = Oo"
     h100,h120,h300: "NAVI = Oo"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Oo"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Oo"
     player: "(PLAY/STOP)"
  </dest>
  <voice>
@@ -2367,21 +2367,21 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
  </source>
  <dest>
     *: "Gumawa database... %d found (OFF sa pagbalik)"
     h100,h120,h300: "Gumawa database... %d found (STOP sa pagbalik)"
     ipod*: "Gumawa database... %d found (PLAY/PAUSE sa pagbalik)"
     x5,m5,gigabeat*,mrobe100: "Gumawa database... %d found (LEFT sa pagbalik)"
-    h10,h10_5gb,e200*,c200,sa9200: "Gumawa database... %d found (PREV sa pagbalik)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Gumawa database... %d found (PREV sa pagbalik)"
  </dest>
  <voice>
     *: "entries found for database"
     h100,h120,h300: ""
     ipod*: ""
     x5,m5,gigabeat*,mrobe100: ""
-    h10,h10_5gb,e200*,c200,sa9200: ""
+    h10,h10_5gb,e200*,c200*,sa9200: ""
  </voice>
 </phrase>
 <phrase>
@@ -4130,19 +4130,19 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
  </source>
  <dest>
     *: none
     rtc: "ON = Ilagay"
     h100,h120,h300: "NAVI = Ilagay"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Ilagay"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Ilagay"
  </dest>
  <voice>
     *: none
     rtc: ""
     h100,h120,h300: ""
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
  </voice>
 </phrase>
 <phrase>
@@ -4153,7 +4153,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4164,7 +4164,7 @@
     *: none
     rtc: "OFF = Mabalik"
     h100,h120,h300: "STOP = Mabalik"
-    ipod*,c200,sa9200: "MENU = Mabalik"
+    ipod*,c200*,sa9200: "MENU = Mabalik"
     x5,m5: "RECORD = Mabalik"
     h10,h10_5gb,e200*: "PREV = Mabalik"
     gigabeatf: "POWER = Mabalik"
@@ -4175,7 +4175,7 @@
     *: none
     rtc: ""
     h100,h120,h300: ""
-    ipod*,e200*,c200,sa9200: ""
+    ipod*,e200*,c200*,sa9200: ""
     x5,m5: ""
     h10,h10_5gb: ""
     gigabeatf: ""
@@ -7024,7 +7024,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -7614,18 +7614,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Puno disk. Magpatuloy Pindutin OFF."
     h100,h120,h300: "Puno disk. Magpatuloy Pindutin STOP."
     m5,x5: "Puno disk. Magpatuloy Pindutin POWER."
-    e200*,c200: "Puno disk. Magpatuloy Pindutin PREV."
+    e200*,c200*: "Puno disk. Magpatuloy Pindutin PREV."
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8076,7 +8076,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8085,7 +8085,7 @@
     player,h100,h120,h300: "STOP sa agas"
     ipod*: "PLAY/PAUSE sa agas"
     x5,m5: "Long PLAY sa agas"
-    h10,h10_5gb,e200*,c200: "PREV sa agas"
+    h10,h10_5gb,e200*,c200*: "PREV sa agas"
     gigabeats: "BACK sa agas"
     gigabeatf: "POWER sa agas"
   </dest>
@@ -10114,19 +10114,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1:"
-    e200*,c200: "MSD:"
+    e200*,c200*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D Isa"
-    e200*,c200: "micro S D"
+    e200*,c200*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
