--- a/apps/lang/thai.lang
+++ b/apps/lang/thai.lang
@@ -262,13 +262,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = ใช่"
     h100,h120,h300: "NAVI = ใช่"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = ใช่"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = ใช่"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2368,14 +2368,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "กำลังสร้างฐานข้อมูล...พบแล้ว %d (OFF เพื่อย้อนกลับ)"
     h100,h120,h300: "กำลังสร้างฐานข้อมูล...พบแล้ว %d (STOP เพื่อย้อนกลับ)"
     ipod*: "กำลังสร้างฐานข้อมูล...พบแล้ว %d (PREV เพื่อย้อนกลับ)"
     x5,m5,gigabeat*,mrobe100: "กำลังสร้างฐานข้อมูล...พบแล้ว %d (LEFT เพื่อย้อนกลับ)"
-    h10,h10_5gb,e200*,c200,sa9200: "กำลังสร้างฐานข้อมูล...พบแล้ว %d (PREV เพื่อย้อนกลับ)"
+    h10,h10_5gb,e200*,c200*,sa9200: "กำลังสร้างฐานข้อมูล...พบแล้ว %d (PREV เพื่อย้อนกลับ)"
   </dest>
   <voice>
     *: "entries found for database"
@@ -4110,13 +4110,13 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = ตั้งค่า"
     h100,h120,h300: "NAVI = ตั้งค่า"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = ตั้งค่า"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = ตั้งค่า"
   </dest>
   <voice>
     *: none
@@ -4130,7 +4130,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4141,7 +4141,7 @@
     *: none
     rtc: "OFF = ยกเลิก"
     h100,h120,h300: "STOP = ยกเลิก"
-    ipod*,c200,sa9200: "MENU = ยกเลิก"
+    ipod*,c200*,sa9200: "MENU = ยกเลิก"
     x5,m5: "RECORD = ยกเลิก"
     h10,h10_5gb,e200*: "PREV = ยกเลิก"
     gigabeatf: "POWER = ยกเลิก"
@@ -6907,19 +6907,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "H D 1"
-    e200*,c200: "micro Secure Digital card:"
+    e200*,c200*: "micro Secure Digital card:"
     ondio*: "Multimedia card"
   </voice>
 </phrase>
@@ -8281,18 +8281,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "ดีสก์เต็ม กดปุ่ม OFF เพื่อทำงานต่อ"
     h100,h120,h300: "ดีสก์เต็ม กดปุ่ม STOP เพื่อทำงานต่อ"
     m5,x5: "ดีสก์เต็ม กดปุ่ม POWER เพื่อทำงานต่อ"
-    e200*,c200: "ดีสก์เต็ม กดปุ่ม PREV เพื่อทำงานต่อ"
+    e200*,c200*: "ดีสก์เต็ม กดปุ่ม PREV เพื่อทำงานต่อ"
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8383,7 +8383,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8392,7 +8392,7 @@
     player,h100,h120,h300: "STOP เพื่อยกเลิก"
     ipod*: "PLAY/PAUSE เพื่อยกเลิก"
     x5,m5: "Long PLAY เพื่อยกเลิก"
-    h10,h10_5gb,e200*,c200: "PREV เพื่อยกเลิก"
+    h10,h10_5gb,e200*,c200*: "PREV เพื่อยกเลิก"
     gigabeats: "BACK เพื่อยกเลิก"
     gigabeatf: "POWER เพื่อยกเลิก"
   </dest>
@@ -10447,7 +10447,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
