--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -266,13 +266,13 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Oyi"
     h100,h120,h300: "NAVI = Oyi"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200,h10,h10_5gb,mrobe100,sa9200: "SELECT = Oyi"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Oyi"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2389,14 +2389,14 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
   </source>
   <dest>
     *: "Bastixhaedje del båze di dnêyes... %d di trovés (OFF po-z eraler en erî)"
     h100,h120,h300: "Bastixhaedje del båze di dnêyes... %d di trovés (STOP po-z eraler en erî)"
     ipod*: "Bastixhaedje del båze di dnêyes... %d di trovés (PREV po-z eraler en erî)"
     x5,m5,gigabeat*,mrobe100: "Bastixhaedje del båze di dnêyes... %d di trovés (LEFT po-z eraler en erî)"
-    h10,h10_5gb,e200*,c200,sa9200: "Bastixhaedje del båze di dnêyes... %d di trovés (PREV po-z eraler en erî)"
+    h10,h10_5gb,e200*,c200*,sa9200: "Bastixhaedje del båze di dnêyes... %d di trovés (PREV po-z eraler en erî)"
   </dest>
   <voice>
     *: "intrêyes trovêyes pol båze di dnêyes"
@@ -4148,17 +4148,17 @@
     *: none
     rtc: "ON = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Eployî"
     h100,h120,h300: "NAVI = Eployî"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200,gigabeat*,mrobe100,sa9200: "SELECT = Eployî"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Eployî"
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,h10,h10_5gb,x5,m5,ipod*,e200*,c200*,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -4169,7 +4169,7 @@
     *: none
     rtc: "OFF = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200,sa9200: "MENU = Revert"
+    ipod*,c200*,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
@@ -4180,7 +4180,7 @@
     *: none
     rtc: "OFF = Rinoncî"
     h100,h120,h300: "STOP = Rinoncî"
-    ipod*,c200,sa9200: "MENU = Rinoncî"
+    ipod*,c200*,sa9200: "MENU = Rinoncî"
     x5,m5: "RECORD = Rinoncî"
     h10,h10_5gb,e200*: "PREV = Rinoncî"
     gigabeatf: "POWER = Rinoncî"
@@ -4189,7 +4189,7 @@
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,ipod*,e200*,c200,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
+    rtc,h100,h120,h300,ipod*,e200*,c200*,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -6948,19 +6948,19 @@
   <source>
     *: none
     multivolume: "HD1"
-    e200*,c200: "mSD:"
+    e200*,c200*: "mSD:"
     ondio*: "MMC:"
   </source>
   <dest>
     *: none
     multivolume: "DP1"
-    e200*,c200: "MSD:"
+    e200*,c200*: "MSD:"
     ondio*: "MMC:"
   </dest>
   <voice>
     *: none
     multivolume: "D P 1"
-    e200*,c200: "micro S D"
+    e200*,c200*: "micro S D"
     ondio*: "M M C"
   </voice>
 </phrase>
@@ -8321,18 +8321,18 @@
     recording: "The disk is full. Press OFF to continue."
     h100,h120,h300: "The disk is full. Press STOP to continue."
     m5,x5: "The disk is full. Press POWER to continue."
-    e200*,c200: "The disk is full. Press PREV to continue."
+    e200*,c200*: "The disk is full. Press PREV to continue."
   </source>
   <dest>
     *: none
     recording: "Li plake est plinne. Tchôkîz OFF et tcheryî pus lon."
     h100,h120,h300: "Li plake est plinne. Tchôkîz STOP et tcheryî pus lon."
     m5,x5: "Li plake est plinne. Tchôkîz POWER et tcheryî pus lon."
-    e200*,c200: "Li plake est plinne. Tchôkîz PREV et tcheryî pus lon."
+    e200*,c200*: "Li plake est plinne. Tchôkîz PREV et tcheryî pus lon."
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
@@ -8423,7 +8423,7 @@
     player,h100,h120,h300: "STOP to abort"
     ipod*: "PLAY/PAUSE to abort"
     x5,m5: "Long PLAY to abort"
-    h10,h10_5gb,e200*,c200: "PREV to abort"
+    h10,h10_5gb,e200*,c200*: "PREV to abort"
     gigabeats: "BACK to abort"
     gigabeatf: "POWER to abort"
   </source>
@@ -8432,7 +8432,7 @@
     player,h100,h120,h300: "STOP po-z abandner"
     ipod*: "PLAY/PAUSE po-z abandner"
     x5,m5: "Long PLAY po-z abandner"
-    h10,h10_5gb,e200*,c200: "PREV po-z abandner"
+    h10,h10_5gb,e200*,c200*: "PREV po-z abandner"
     gigabeats: "BACK po-z abandner"
     gigabeatf:"POWER po-z abandner"
   </dest>
@@ -10487,7 +10487,7 @@
   </dest>
   <voice>
     *: none
-    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200: ""
+    recording,h100,h120,h300,m5,x5,ipod4g,ipodcolor,ipodnano,ipodvideo,e200*,c200*: ""
   </voice>
 </phrase>
 <phrase>
